crates/vize_atelier_sfc/tests/snapshots/module_mode_setup_bindings__module_mode_does_not_keep_type_import_for_prefixed_component_name.snap
---
source: crates/vize_atelier_sfc/tests/module_mode_setup_bindings.rs
expression: result.code.as_str()
---
import { openBlock as _openBlock, createBlock as _createBlock } from "vue";
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createBlock($setup.ItemTab, { label: $props.item.label ?? "none" }, null, 8, ["label"]);
}
import ItemTab from "./ItemTab.vue";
export default {
  __name: "anonymous",
  props: { item: {
    type: null,
    required: false,
    default: () => ({})
  } },
  render: _sfc_render,
  setup(__props) {
    const __returned__ = { ItemTab };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
};
