crates/vize_atelier_sfc/tests/snapshots/module_mode_setup_bindings__module_mode_keeps_bare_define_emits_on_the_public_instance_proxy.snap
---
source: crates/vize_atelier_sfc/tests/module_mode_setup_bindings.rs
expression: result.code.as_str()
---
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createBlock as _createBlock, Transition as _Transition, withCtx as _withCtx } from "vue"

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("div")

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createBlock(_Transition, {
    onAfterLeave: $event => (_ctx.$emit('destroy'))
  }, {
    default: _withCtx(() => [
      _hoisted_1
    ]),
    _: 1 /* STABLE */
  }, 8 /* PROPS */, ["onAfterLeave"]))
}

export default {
  __name: 'anonymous',
  emits: ['destroy'],
  render: _sfc_render,
  setup(__props, { emit: $emit }) {


return {}
}

}
