crates/vize_atelier_sfc/tests/snapshots/module_mode_setup_bindings__module_mode_omits_imports_used_only_in_types.snap
---
source: crates/vize_atelier_sfc/tests/module_mode_setup_bindings.rs
expression: result.code.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock(
    "div",
    null,
    _toDisplayString($setup.props.badges.length),
    1
    /* TEXT */
  );
}
export default {
  __name: "anonymous",
  props: { badges: {
    type: Array,
    required: true
  } },
  render: _sfc_render,
  setup(__props) {
    const props = __props;
    const __returned__ = { props };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
};
