crates/vize_atelier_sfc/tests/snapshots/module_mode_setup_bindings__module_mode_returns_script_setup_bindings_for_the_public_instance_proxy.snap
---
source: crates/vize_atelier_sfc/tests/module_mode_setup_bindings.rs
expression: result.code.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"


function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList($setup.flattenTree, (node) => {
    return (_openBlock(), _createElementBlock("div", { key: node }, _toDisplayString(node), 1 /* TEXT */))
  }), 128 /* KEYED_FRAGMENT */))
}
import { computed } from 'vue'


export default {
  __name: 'anonymous',
  render: _sfc_render,
  setup(__props, { expose: __expose }) {

const nodes = [1, 2, 3]
const flattenTree = computed(() => nodes)
__expose({ nodes })

const __returned__ = { computed, nodes, flattenTree }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

}
